--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 Theme Name: Some@ Personal Blog
 Author: Samet Aydemir
 Version: 1.0
-Text Domain: some@ 
+Text Domain: some@
+License: GNU General Public License v2 or later
 */
 /* Body */
 /* line 13, assets/css/style.scss */
